# pkg/api/rest/docs/swagger.json
@@ -473,7 +473,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/models.ResponseResources"
                         }
                     },
                     "400": {
@@ -1388,7 +1388,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "$ref": "#/definitions/models.ResponseResources"
                         }
                     },
                     "400": {
@@ -1584,6 +1584,19 @@
                 "text": {
                     "type": "string",
                     "example": "Any text"
+                }
+            }
+        },
+        "models.ResponseResources": {
+            "type": "object",
+            "properties": {
+                "resources": {
+                    "type": "array",
+                    "items": {}
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         },
