# pkg/api/rest/handlers/vpn-gcp-aws.go
@@ -14,6 +14,7 @@ limitations under the License.
 package handlers
 
 import (
+	"encoding/json"
 	"fmt"
 	"net/http"
 	"os"
@@ -23,6 +24,7 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/rs/zerolog/log"
 	"github.com/spf13/viper"
+	"github.com/tidwall/gjson"
 )
 
 // ////////////////////////////////////////////////////
@@ -152,7 +154,7 @@ func ClearGcpAwsVpn(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Param resourceGroupId path string true "Resource group ID" default(tofu-rg-01)
-// @Success 200 {object} models.Response "OK"
+// @Success 200 {object} models.ResponseResources "OK"
 // @Failure 400 {object} models.Response "Bad Request"
 // @Failure 503 {object} models.Response "Service Unavailable"
 // @Router /rg/{resourceGroupId}/vpn/gcp-aws/state [get]
@@ -179,13 +181,23 @@ func GetStateOfGcpAwsVpn(c echo.Context) error {
 
 	// global option to set working dir: -chdir=/home/ubuntu/dev/cloud-barista/poc-mc-net-tf/.tofu/{resourceGroupId}/vpn/gcp-aws
 	// show: subcommand
-	ret, err := tofu.ExecuteTofuCommand(rgId, reqId, "-chdir="+workingDir, "show")
+	ret, err := tofu.ExecuteTofuCommand(rgId, reqId, "-chdir="+workingDir, "show", "-json")
 	if err != nil {
-		res := models.Response{Success: false, Text: "Failed to show the current state of a saved plan"}
+		res := models.Response{Success: false, Text: "Failed to show the output from a state or plan file"}
 		return c.JSON(http.StatusInternalServerError, res)
 	}
 
-	res := models.Response{Success: true, Text: ret}
+	// Parse the resources from the output
+	resourcesString := gjson.Get(ret, "values.root_module.resources").String()
+
+	var resources []interface{}
+	err = json.Unmarshal([]byte(resourcesString), &resources)
+	if err != nil {
+		res := models.Response{Success: false, Text: "Failed to unmarshal resources"}
+		return c.JSON(http.StatusInternalServerError, res)
+	}
+
+	res := models.ResponseResources{Success: true, Resources: resources}
 	log.Debug().Msgf("%+v", res) // debug
 
 	return c.JSON(http.StatusOK, res)
